# semantiva-studio-viewer

./: .coverage  .gitignore  CHANGELOG.md  NOTICE  README.md  ci_pipeline.sh  pyproject.toml
.github/workflows/: api_doc.yaml  ci-pipeline.yaml
scripts/: __init__.py  add_license.py  check_license_headers.py
semantiva_studio_viewer/: __init__.py  __main__.py  cli.py  components.py  core_trace_index.py  pipeline.py  runspace_api.py  ser_index.py  trace_index.py  trace_index_with_runspace.py
semantiva_studio_viewer/web_gui/: components.html  index.html
semantiva_studio_viewer/web_gui/static/: components.css  components.js  pipeline.css  pipeline.js
semantiva_studio_viewer/web_gui/static/core/: coordinateSystem.js
tests/: __init__.py  pipeline_float_invalid.yaml  pipeline_float_valid.yaml  test_api_pipeline_identity_passthrough.py  test_core_trace_index_adapter.py  test_export_component_gui.py  test_export_pipeline_gui.py  test_meta_exposure.py  test_multi_ser.py  test_positional_mapping.py  test_runspace_api.py  test_runspace_launch_details.py  test_ser_index.py  test_ser_pipeline_integration.py  test_serve_component_gui.py  test_serve_pipeline_gui.py  test_trace_meta_adapter_identity.py  test_viewer_yaml_only_mode.py  test_viewer_yaml_plus_trace_mode.py
